--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,20 @@
 * {
-    margin: 0;
-    padding: 0;
-}  
+  margin: 0;
+  padding: 0;
+}
 
 body {
-    background-color: #1a202c;
-    color: #e2e8f0;
-    font-family: 'Inter', sans-serif;
-    line-height: 1.6;
-} 
+  background-color: #1a202c;
+  color: #e2e8f0;
+  font-family: "Inter", sans-serif;
+  line-height: 1.6;
+}
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Inter', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Inter", sans-serif;
 }
