--- a/src/styles/PageHeader.css
+++ b/src/styles/PageHeader.css
@@ -7,7 +7,7 @@
 }
 
 .page-header__back {
-  color: #63b3ed;
+  color: #38a169;
   text-decoration: none;
   margin-right: 20px;
   font-size: 1rem;
